apply 1.7pre05816fb84c59